--- a/play/templates/play.html
+++ b/play/templates/play.html
@@ -353,7 +353,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     async function verifyPuzzle(puzzleSetData) {
         try {
-            const csrftoken = getCookie('csrftoken');
+            const csrftoken = "{{ csrf_token }}";
             const response = await fetch('/play/', {
                 method: 'POST',
                 headers: {
@@ -419,21 +419,6 @@ document.addEventListener('DOMContentLoaded', function() {
                         happyMessage.style.display = 'none'
                     }, 200);
                 }, 3200);
-    }
-
-    function getCookie(name) {
-        let cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            const cookies = document.cookie.split(';');
-            for (let i = 0; i < cookies.length; i++) {
-                const cookie = cookies[i].trim();
-                if (cookie.startsWith(name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
-                }
-            }
-        }
-        return cookieValue;
     }
 
     function clearGrid() {
